--- a/.github/workflows/build-padavan.yml
+++ b/.github/workflows/build-padavan.yml
@@ -16,7 +16,7 @@ on:
 
 jobs:
   build:
-    runs-on: debian-latest
+    runs-on: debian 11
     if: github.event.repository.owner.id == github.event.sender.id
 
     steps:
